hphp/test/zend/good/ext-gd/imagecreatetruecolor_error1.php
<?php
$image = imagecreatetruecolor('s', 30);
$image = imagecreatetruecolor(30, 's');
?>