hphp/test/zend/bad/ext-gd/imagefilter_error5.php
<?php
$image = imagecreatetruecolor(180, 30);

var_dump(imagefilter($image, IMG_FILTER_SMOOTH, 'wrong parameter'));
?>